<resources>
    <string name="app_name">Intent</string>
    <string name="transfer_data">Передать данные</string>
    <string name="enter_the_text">Введите текст</string>
    <string name="got_data">Полученные данные</string>
    <string name="open_calculator">Открыть калькулятор</string>
    <string name="confirm">Подтвердить</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
</resources>